# AutoSinan

./: .env.template  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  schema.prisma
backend/config/: __init__.py  constants.py  settings.py
backend/core/: abstract.py
backend/database/: __init__.py  db.py  partials.py
backend/database/start/: __init__.py  bots.py  dynamic_methods.py  roles.py
backend/investigation/: investigator.py  sinan.py
backend/middlewares/: __init__.py  session.py
backend/models/: auth.py  bot.py
backend/routers/: auth.py  bots.py  configurations.py  executions.py  users.py
backend/services/auth/: __init__.py  oauth2.py  permission.py  utils.py
core/: abstract.py  constants.py  utils.py
frontend/: Dockerfile  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: BotCard.vue  DeveloperProfile.vue  ErrorState.vue  FaqSection.vue  GlobalLoading.vue  HorizontalBotNavigation.vue  LoadingState.vue  ProjectDescription.vue  ThemeToggle.vue  VerticalNavigation.vue  WelcomeMessage.vue
frontend/components/config/: Input.vue  Select.vue
frontend/composables/: useAuth.ts  useBotConfigurationUpdate.ts  useBotConfigurations.ts  useBotExecutions.ts  useBots.ts  useDebounce.ts  useIsRouteLoading.ts  useNavigationLogInOutItem.ts
frontend/layouts/: bot.vue  default.vue
frontend/middleware/: auth.global.ts  auth.ts  pageName.global.ts
frontend/pages/: about.vue  index.vue  login.vue  logout.vue  logs.vue  settings.vue
frontend/pages/bots/: investigator.vue
frontend/pages/bots/investigator/: logs.vue  run.vue  settings.vue
frontend/types/: bot.ts  user.ts
frontend/utils/: constants.ts
investigation/: __init__.py  data_loader.py  investigator.py  notification_researcher.py  patient.py  report.py  sheet.py  sinan.py
nginx/: nginx.conf
