[tool.poetry]
name = "autosinan"
version = "0.1.0"
description = ""
authors = ["sr-pato <felipe.adeildo@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
dbfread = "^2.0.7"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
ipython = "^8.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
